v0.6 (unreleased)
[I don't know how long this will last]
    -Added the following new functions:
        (general) hfssAssignPointVariable(...)
    -Added support for arrays of single values in hfssSweepAnalysis.
    -Fix optional units argument in hfssEditSlave.
    -Fix rotation/move of one element when specified with a string.
    -Improved documentation.

v0.5 (09-December-2020)
[What year is this?]
    -Added the following new functions:
        (boundary) hfssAssignImpedance(...) (thanks Rounak Singh Narde).
        (boundary) hfssEditFloquetPort(...)
        (boundary) hfssEditSlave(...)
        (analysis) hfssSweepAnalysis(...)
        (analysis) hfssSolveSweepAnalysis(...)
        (general)  hfssSetVariable(...) (thanks Rounak Singh Narde).
        (general)  hfssAssignSizeVariable(...)
        (general)  hfssAssignPositionVariable(...)
    -Added phi and theta (scan angle) as input variables in hfssAssignSlave.
    -hfssSetVariable now allows to assign a variable as a function of other variables.
    -hfssAssignFloquetPort now allows to invert the order to the TE-TM modes.
    -hfssSetColor can set a color to several objects simultaneously.
    -Fixed examples to lastest AnsysEM version.
    -Fixed closed polyline assignment.
    -Floquet port: 3D refinement enabled by default.
    -Fixes in hfssAssignSlave documentation.
    -Removed miscellaneous semicolons and commas from some files.

v0.4 (06-October-2014)
[Nothing lasts forever]
    - Added new function hfssSweepAlongVector.
    - Added hfssAssignLumpedRLC to boundary/ (thanks Pablo).
    - Added option to clone parts in hfssSubstract.
    - Added option for closed polylines.
    - Fixed crash in hfssAssignLumpedRLC (thanks Pablo).
    - Fixed representation of polylines.

v0.3 (17-September-2013)
[Better late than never]
    - Added the following functions to boundary/ (thanks Pablo):
        hfssAssignMaster(...)
        hfssAssignSlave(...)
        hfssAssignFloquetPort(...)