@@ -3,6 +3,7 @@ v0.6 (unreleased)
     -Added the following new functions:
         (general) hfssAssignPointVariable(...)
     -Added support for arrays of single values in hfssSweepAnalysis.
+    -Added support for SweepAlongVector in hfssPositionVariable.
     -Fix optional units argument in hfssEditSlave.
     -Fix rotation/move of one element when specified with a string.
     -Improved documentation.
